# dqn-battleship-agent

./: .gitignore  README.md  TECHNICAL_GUIDE.md  play.py  pyproject.toml  watch_agent_play.sh
configs/: battleship.yaml  rl_config.yaml  rl_config_medium.yaml  rl_config_quick.yaml
game/: __init__.py  battleship_game.py  client.py
rl/: __init__.py  dqn_agent.py  evaluate.py  networks.py  replay_buffer.py  train.py  visualize_play.py
tests/: __init__.py  test_battleship.py
